# ChangeLog for dev-perl/Locale-gettext
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Locale-gettext/ChangeLog,v 1.32 2006/10/10 19:53:59 mcummings Exp $

  10 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -Locale-gettext-1.01-r1.ebuild, -Locale-gettext-1.03.ebuild,
  -Locale-gettext-1.04.ebuild, Locale-gettext-1.05.ebuild:
  Cleaning out stale ebuilds

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Locale-gettext-1.01-r1.ebuild, Locale-gettext-1.03.ebuild,
  Locale-gettext-1.04.ebuild, Locale-gettext-1.05.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Locale-gettext-1.01-r1.ebuild, Locale-gettext-1.03.ebuild,
  Locale-gettext-1.04.ebuild, Locale-gettext-1.05.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  Locale-gettext-1.05.ebuild:
  Add ~x86-fbsd keyword.

  24 Apr 2006; Joshua Kinard <kumba@gentoo.org> Locale-gettext-1.05.ebuild:
  Marked stable on mips.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Locale-gettext-1.04.ebuild, Locale-gettext-1.05.ebuild:
  Virtuals for perl-core

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> Locale-gettext-1.05.ebuild:
  stable on amd64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org>
  Locale-gettext-1.05.ebuild:
  Mark 1.05 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> Locale-gettext-1.05.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  Locale-gettext-1.05.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Locale-gettext-1.05.ebuild:
  marking sparc x86 stable

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  Locale-gettext-1.04.ebuild, Locale-gettext-1.05.ebuild:
  Marking stable x86

*Locale-gettext-1.05 (17 Jun 2005)

  17 Jun 2005; Michael Cummings <mcummings@gentoo.org>
  +Locale-gettext-1.05.ebuild:
  version bump
